Future directions, bis.

--- a/templates/bib/bib.bib
+++ b/templates/bib/bib.bib
@@ -548,6 +548,15 @@
   doi =           {10.4204/EPTCS.368.1},
 }
 
+@unpublished{Aubert2023f,
+  author =        {Aubert, Clément and Horne, Ross and Mauw, Sjouke and
+                   Johansen, Christian},
+  note =          {Submitted to Computers \& Security},
+  title =         {Unlinkability and History Preserving Bisimilarity},
+  url =           {https://aubert.perso.math.cnrs.fr/recherche/partages/temp/
+                  COSE-D-23-02121.pdf},
+}
+
 @inproceedings{Aubert2022e,
   author =        {Aubert, Clément and Horne, Ross and
                    Johansen, Christian},
@@ -11588,7 +11597,7 @@
 
 @article{Tiezzi2015,
   author =        {Francesco Tiezzi and Nobuko Yoshida},
-  journal =       {J. Log. Algebraic Methods Program.},
+  journal =       {The Journal of Logic and Algebraic Programming},
   number =        {5},
   pages =         {684--707},
   title =         {Reversible session-based pi-calculus},
@@ -12123,7 +12132,7 @@
 }
 
 @inproceedings{Horne2018,
-  author =        {Ross Horne and Ki Yung Ahn and Shang{-}Wei Lin and
+  author =        {Horne, Ross and Ki Yung Ahn and Shang{-}Wei Lin and
                    Alwen Tiu},
   booktitle =     {LICS},
   editor =        {Anuj Dawar and Erich Gr{\"{a}}del},
@@ -12168,7 +12177,7 @@
 }
 
 @article{Horne2021,
-  author =        {Ross Horne and Sjouke Mauw},
+  author =        {Horne, Ross and Sjouke Mauw},
   journal =       {Logical Methods in Computer Science},
   number =        {2},
   pages =         {24},
@@ -12180,7 +12189,7 @@
 }
 
 @inproceedings{horne2021quasi,
-  author =        {Ross Horne and Sjouke Mauw and Semen Yurkov},
+  author =        {Horne, Ross and Mauw, Sjouke and Yurkov, Semen},
   booktitle =     {Theoretical Aspects of Computing - {ICTAC} 2021 -
                    18th International Colloquium, Virtual Event,
                    Nur-Sultan, Kazakhstan, September 8-10, 2021,
@@ -12199,7 +12208,7 @@
 }
 
 @inproceedings{Filimonov2019,
-  author =        {Ihor Filimonov and Ross Horne and Sjouke Mauw and
+  author =        {Ihor Filimonov and Horne, Ross and Mauw, Sjouke and
                    Zach Smith},
   booktitle =     {Computer Security - {ESORICS} 2019 - 24th European
                    Symposium on Research in Computer Security,
@@ -20547,7 +20556,7 @@
 }
 
 @misc{horne2021breaking,
-  author =        {Ross Horne and Sjouke Mauw and Semen Yurkov},
+  author =        {Horne, Ross and Sjouke Mauw and Yurkov, Semen},
   title =         {Breaking and Fixing Unlinkability of the Key
                    Agreement Protocol for 2nd Gen {EMV} Payments},
   year =          {2021},
@@ -20555,7 +20564,7 @@
 }
 
 @article{Ahn2021,
-  author =        {Ki Yung Ahn and Ross Horne and Alwen Tiu},
+  author =        {Ki Yung Ahn and Horne, Ross and Alwen Tiu},
   journal =       {Logical Methods in Computer Science},
   month =         aug,
   pages =         {2:1--2:40},
@@ -21207,7 +21216,7 @@
 }
 
 @inproceedings{Ahn2017,
-  author =        {Ki Yung Ahn and Ross Horne and Alwen Tiu},
+  author =        {Ki Yung Ahn and Horne, Ross and Alwen Tiu},
   booktitle =     {28th International Conference on Concurrency Theory
                    (CONCUR'17)},
   editor =        {Roland Meyer and Uwe Nestmann},
